fix: fix block alignment

--- a/client/src/components/Block/Block.module.scss
+++ b/client/src/components/Block/Block.module.scss
@@ -18,15 +18,16 @@
       width: 100%;
       grid-auto-flow: row;
       grid-template-areas: "start center end";
+
+      & > .block-item { align-self: center; }
     }
 
     &--row { grid-template-columns: 1fr auto 1fr; }
-    &--row-center { grid-template-columns: auto 1fr auto; }
+    &--row-center {
+      grid-template-columns: auto 1fr auto;
 
-    &--row,
-    &--row-center > .block-item { align-self: center; }
-    &--row-center > .block-item { justify-self: stretch; }
-
+      & > .block-item { justify-self: stretch; }
+    }
 
     &--column,
     &--column-center {
@@ -36,13 +37,15 @@
       "start"
       "center"
       "end";
+
+      & > .block-item { justify-self: center; }
     }
 
     &--column { grid-template-rows: 1fr auto 1fr; }
-    &--column-center { grid-template-rows: auto 1fr auto; }
+    &--column-center {
+      grid-template-rows: auto 1fr auto;
 
-    &--column,
-    &--column-center > .block-item { justify-self: center; }
-    &--column-center > .block-item { align-self: stretch; }
+      & > .block-item { align-self: stretch; }
+    }
   }
 }
